--- a/WPF_cours_project/testMvvm/View/ListCarPage.xaml
+++ b/WPF_cours_project/testMvvm/View/ListCarPage.xaml
@@ -25,7 +25,7 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Button  Style="{StaticResource MyButtonStyle4}">
+                        <Button  Style="{StaticResource MyButtonStyle4}" Click="Button_Click_1">
                             <Button.Background>
                                 <ImageBrush ImageSource="{Binding ImagePathCar}"/>
                             </Button.Background>
