upgrade addMenu and profile car

--- a/WPF_cours_project/testMvvm/View/Windows/AddWindow.xaml
+++ b/WPF_cours_project/testMvvm/View/Windows/AddWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:testMvvm.View.Windows"
         mc:Ignorable="d"
-        Title="AddWindow" Height="450" Width="450" ResizeMode="NoResize" Background="Transparent" WindowStyle="None">
+        Title="AddWindow" Height="500" Width="450" ResizeMode="NoResize" Background="Transparent" WindowStyle="None">
     <Grid Background="Transparent">
         <Border Background="#F4E8DE" MouseDown="Border_MouseDown" >
 
@@ -15,17 +15,19 @@
 
         </Border>
 
-        <DatePicker  Tag="Data" Margin="84,201,0,159" CalendarStyle="{StaticResource DataPickerCalendarStyle}" Style="{StaticResource DataPickerStyle}" Width="255" HorizontalAlignment="Left"/>
-        <Button Content="Add" FontSize="20" Style="{StaticResource MyButtonStyle}" Margin="0,379,0,0" Height="35" Width="128" Click="Button_Click"/>
-        <TextBox x:Name="TNameCar" Style="{StaticResource tbox_nameCar}" Tag="Car name" Margin="0,118,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="278" Height="35"/>
-        <TextBox x:Name="TNumberCar" Style="{StaticResource tbox_numberCar}" Tag="Car number" Margin="0,175,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="278" Height="35"/>
-        <Button Content="Load" FontSize="20" Style="{StaticResource MyButtonStyle}" Click="Button_Click2" Margin="0,328,0,0" Height="35" Width="128" />
+        <DatePicker x:Name="DataTO"  Tag="DataTO" Margin="88,158,0,290" CalendarStyle="{StaticResource DataPickerCalendarStyle}" Style="{StaticResource DataPickerStyle}" Width="254" HorizontalAlignment="Left"/>
+        <DatePicker x:Name="DataCT" Tag="DataCT" Margin="88,251,0,205" CalendarStyle="{StaticResource DataPickerCalendarStyle}" Style="{StaticResource DataPickerStyle}" Width="254" HorizontalAlignment="Left"/>
+        <Button Content="Add" FontSize="20" Style="{StaticResource MyButtonStyle}" Margin="0,455,0,0" Height="35" Width="128" Click="Button_Click"/>
+        <TextBox x:Name="TNameCar" Style="{StaticResource tbox_nameCar}" Tag="Car name" Margin="0,68,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="278" Height="35"/>
+        <TextBox x:Name="TNumberCar" Style="{StaticResource tbox_numberCar}" Tag="Car number" Margin="0,119,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="278" Height="35"/>
+        <Button Content="Load" FontSize="20" Style="{StaticResource MyButtonStyle}" Click="Button_Click2" Margin="0,404,0,0" Height="35" Width="128" />
         <Button Content="x" FontSize="20" Style="{StaticResource MyButtonStyle}" Click="Button_Click_1" Margin="413,10,0,0" Height="29" Width="27" HorizontalAlignment="Left" />
-        <ComboBox Margin="86,275,111,136" Style="{DynamicResource ComboBoxStyle1}">
+        <ComboBox x:Name="ComboBox1"  Margin="88,355,0,110" Style="{DynamicResource ComboBoxStyle1}" HorizontalAlignment="Left">
             <ComboBoxItem Content="- None -"/>
-            <ComboBoxItem Content="Men"/>
-            <ComboBoxItem Content="Woman"/>
+            
         </ComboBox>
+        <DatePicker x:Name="DataTONext" Tag="DataTONext" Margin="88,210,0,254" CalendarStyle="{StaticResource DataPickerCalendarStyle}" Style="{StaticResource DataPickerStyle}" Width="254" HorizontalAlignment="Left"/>
+        <DatePicker x:Name="DataCTNext"  Tag="DataCTNext" Margin="88,295,0,150" CalendarStyle="{StaticResource DataPickerCalendarStyle}" Style="{StaticResource DataPickerStyle}" Width="254" HorizontalAlignment="Left"/>
 
 
     </Grid>
