--- a/WPF_cours_project/testMvvm/View/Windows/InfoCarWindow.xaml
+++ b/WPF_cours_project/testMvvm/View/Windows/InfoCarWindow.xaml
@@ -6,8 +6,31 @@
         xmlns:local="clr-namespace:testMvvm.View.Windows"
         mc:Ignorable="d"
         Title="InfoCarWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#DAD1BD" >
         <Image x:Name="ImageControl" Margin="10,10,499,237"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="468,285,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Grid Background="#F4E8DE"  Margin="372,10,161,105">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="17*"/>
+                <ColumnDefinition Width="15*"/>
+            </Grid.ColumnDefinitions>
+            <Label Content="Водитель : " HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Height="26" Width="70"/>
+            <Label Content="Дата ТО : " HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="1" Margin="10,0,0,0" Height="26" Width="63"/>
+            <Label Content="Дата след. ТО : " HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="3" Margin="10,14,0,0" Height="26" Width="94"/>
+            <Label Content="Дата СТ : " HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="2" Margin="10,0,0,0" Height="26" Width="62"/>
+            <Label Content="Дата след. CТ : " HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="4" Margin="10,14,0,0" Height="26" Width="94"/>
+            <Label x:Name="LableDriverName" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center"/>
+            <Label x:Name="LableDateTO" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Row="1"/>
+            <Label x:Name="LableDateCT" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Row="2"/>
+            <Label x:Name="LableDateNextTO" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Grid.Row="3"/>
+            <Label x:Name="LableDateNextCT" Grid.Column="1" Content="Label" HorizontalAlignment="Left" Margin="10,14,0,0" VerticalAlignment="Top" Grid.Row="4"/>
+
+        </Grid>
     </Grid>
 </Window>
